@@ -1,20 +1,25 @@
 package plugin.javafxtools.service;
 
 import plugin.javafxtools.model.HttpRequestResult;
+import plugin.javafxtools.util.HttpUrlSupport;
 
-import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
+import java.io.Reader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.stream.Collectors;
+import java.util.regex.Pattern;
 
 /**
  * HTTP 请求发送、请求头解析和响应体截断处理。
@@ -23,17 +28,8 @@ import java.util.stream.Collectors;
  */
 public class HttpRequestService {
     private static final int MAX_RESPONSE_BODY_CHARS = 200_000;
-
-    private final HttpResponseFormatter responseFormatter;
-
-    /**
-     * 创建 HTTP 请求执行服务。
-     *
-     * @param responseFormatter 响应格式化服务
-     */
-    public HttpRequestService(HttpResponseFormatter responseFormatter) {
-        this.responseFormatter = responseFormatter;
-    }
+    private static final Pattern HEADER_NAME_PATTERN = Pattern.compile(
+            "[!#$%&'*+.^_`|~0-9A-Za-z-]+");
 
     /**
      * 发送 HTTP 请求。
@@ -58,7 +54,7 @@ public class HttpRequestService {
         HttpURLConnection connection = null;
 
         try {
-            URL url = new URL(fullUrl);
+            URL url = parseUrl(fullUrl);
             connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod(method);
             connection.setConnectTimeout(connectTimeout);
@@ -71,10 +67,7 @@ public class HttpRequestService {
             int responseCode = connection.getResponseCode();
             String headerLog = buildHeaderLog(responseCode, connection.getHeaderFields());
             String responseBody = readResponseBody(connection, responseCode);
-            return new HttpRequestResult(
-                    headerLog + responseFormatter.limitForLog(responseBody),
-                    responseBody
-            );
+            return new HttpRequestResult(headerLog, responseBody);
         } finally {
             if (connection != null) {
                 connection.disconnect();
@@ -82,9 +75,9 @@ public class HttpRequestService {
         }
     }
 
-    private String buildRequestUrl(String urlStr, String method, String params) {
+    String buildRequestUrl(String urlStr, String method, String params) {
         if (!(method.equalsIgnoreCase("GET") || method.equalsIgnoreCase("HEAD"))
-                || params == null || params.isEmpty()) {
+                || params == null || params.isBlank()) {
             return urlStr;
         }
 
@@ -92,20 +85,31 @@ public class HttpRequestService {
                 .map(String::trim)
                 .map(this::encodeQueryPair)
                 .collect(Collectors.joining("&"));
-        return urlStr + (urlStr.contains("?") ? "&" : "?") + encodedParams;
+        int fragmentIndex = urlStr.indexOf('#');
+        String requestTarget = fragmentIndex >= 0 ? urlStr.substring(0, fragmentIndex) : urlStr;
+        String fragment = fragmentIndex >= 0 ? urlStr.substring(fragmentIndex) : "";
+        String separator;
+        if (!requestTarget.contains("?")) {
+            separator = "?";
+        } else if (requestTarget.endsWith("?") || requestTarget.endsWith("&")) {
+            separator = "";
+        } else {
+            separator = "&";
+        }
+        return requestTarget + separator + encodedParams + fragment;
+    }
+
+    private URL parseUrl(String value) throws IOException {
+        return HttpUrlSupport.toUrl(value);
     }
 
     private String encodeQueryPair(String pair) {
         int idx = pair.indexOf('=');
-        if (idx <= 0) {
-            return pair;
+        if (idx < 0) {
+            return URLEncoder.encode(pair, StandardCharsets.UTF_8);
         }
-        try {
-            return URLEncoder.encode(pair.substring(0, idx), StandardCharsets.UTF_8) + "="
-                    + URLEncoder.encode(pair.substring(idx + 1), StandardCharsets.UTF_8);
-        } catch (Exception e) {
-            return pair;
-        }
+        return URLEncoder.encode(pair.substring(0, idx), StandardCharsets.UTF_8) + "="
+                + URLEncoder.encode(pair.substring(idx + 1), StandardCharsets.UTF_8);
     }
 
     private void applyCustomHeaders(HttpURLConnection connection, List<String[]> customHeaders) {
@@ -120,7 +124,7 @@ public class HttpRequestService {
                                           String method,
                                           String params,
                                           List<String[]> customHeaders) throws IOException {
-        if (!Arrays.asList("POST", "PUT", "PATCH").contains(method.toUpperCase())) {
+        if (!Arrays.asList("POST", "PUT", "PATCH").contains(method.toUpperCase(Locale.ROOT))) {
             return;
         }
 
@@ -129,7 +133,7 @@ public class HttpRequestService {
             connection.setRequestProperty("Content-Type", "application/json; charset=utf-8");
         }
         try (OutputStream os = connection.getOutputStream()) {
-            byte[] input = params.getBytes(StandardCharsets.UTF_8);
+            byte[] input = (params == null ? "" : params).getBytes(StandardCharsets.UTF_8);
             os.write(input, 0, input.length);
         }
     }
@@ -144,43 +148,85 @@ public class HttpRequestService {
         return headerLog.toString();
     }
 
-    private String readResponseBody(HttpURLConnection connection, int responseCode) throws IOException {
+    String readResponseBody(HttpURLConnection connection, int responseCode) throws IOException {
         StringBuilder responseBody = new StringBuilder();
-        try (BufferedReader reader = new BufferedReader(new InputStreamReader(
-                responseCode < HttpURLConnection.HTTP_BAD_REQUEST
-                        ? connection.getInputStream()
-                        : connection.getErrorStream(), StandardCharsets.UTF_8))) {
-            String responseLine;
+        InputStream responseStream = responseCode < HttpURLConnection.HTTP_BAD_REQUEST
+                ? connection.getInputStream()
+                : connection.getErrorStream();
+        if (responseStream == null) {
+            return "";
+        }
+
+        try (Reader reader = new InputStreamReader(responseStream, responseCharset(connection))) {
+            char[] buffer = new char[8_192];
             boolean truncated = false;
-            while ((responseLine = reader.readLine()) != null) {
-                if (responseBody.length() + responseLine.length() + 1 > MAX_RESPONSE_BODY_CHARS) {
-                    int remaining = Math.max(0, MAX_RESPONSE_BODY_CHARS - responseBody.length());
-                    if (remaining > 0) {
-                        responseBody.append(responseLine, 0, Math.min(remaining, responseLine.length()));
-                    }
+            int read;
+            while ((read = reader.read(buffer)) != -1) {
+                int remaining = MAX_RESPONSE_BODY_CHARS - responseBody.length();
+                if (read > remaining) {
+                    responseBody.append(buffer, 0, Math.max(remaining, 0));
                     truncated = true;
                     break;
                 }
-                responseBody.append(responseLine).append("\n");
+                responseBody.append(buffer, 0, read);
             }
             if (truncated) {
-                responseBody.append("\n[响应体过大，已截断]");
+                if (!responseBody.isEmpty()
+                        && responseBody.charAt(responseBody.length() - 1) != '\n') {
+                    responseBody.append('\n');
+                }
+                responseBody.append("[响应体过大，已截断]");
             }
         }
-        return responseBody.toString().trim();
+        return responseBody.toString();
     }
 
-    private List<String[]> parseHeaders(String text) {
-        if (text == null || text.trim().isEmpty()) {
-            return Collections.emptyList();
+    private Charset responseCharset(HttpURLConnection connection) {
+        String contentType = connection.getContentType();
+        if (contentType == null || contentType.isBlank()) {
+            return StandardCharsets.UTF_8;
         }
-        return Arrays.stream(text.split("\n"))
-                .map(String::trim)
-                .filter(line -> !line.isEmpty() && line.contains(":"))
-                .map(line -> {
-                    int idx = line.indexOf(':');
-                    return new String[]{line.substring(0, idx).trim(), line.substring(idx + 1).trim()};
-                }).collect(Collectors.toList());
+
+        for (String parameter : contentType.split(";")) {
+            int separatorIndex = parameter.indexOf('=');
+            if (separatorIndex < 0
+                    || !"charset".equalsIgnoreCase(parameter.substring(0, separatorIndex).trim())) {
+                continue;
+            }
+            String charsetName = parameter.substring(separatorIndex + 1).trim();
+            if (charsetName.length() >= 2 && charsetName.startsWith("\"")
+                    && charsetName.endsWith("\"")) {
+                charsetName = charsetName.substring(1, charsetName.length() - 1).trim();
+            }
+            try {
+                return Charset.forName(charsetName);
+            } catch (IllegalArgumentException ignored) {
+                return StandardCharsets.UTF_8;
+            }
+        }
+        return StandardCharsets.UTF_8;
+    }
+
+    List<String[]> parseHeaders(String text) throws IOException {
+        if (text == null || text.trim().isEmpty()) {
+            return List.of();
+        }
+
+        List<String[]> headers = new ArrayList<>();
+        String[] lines = text.split("\\R", -1);
+        for (int i = 0; i < lines.length; i++) {
+            String line = lines[i].trim();
+            if (line.isEmpty()) {
+                continue;
+            }
+            int separatorIndex = line.indexOf(':');
+            String name = separatorIndex < 0 ? "" : line.substring(0, separatorIndex).trim();
+            if (separatorIndex < 1 || !HEADER_NAME_PATTERN.matcher(name).matches()) {
+                throw new IOException("第 " + (i + 1) + " 行请求头格式无效，应为 名称: 值");
+            }
+            headers.add(new String[]{name, line.substring(separatorIndex + 1).trim()});
+        }
+        return headers;
     }
 
     private String getHeaderValue(List<String[]> headers, String key) {
